# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.187 2005/11/26 03:36:54 agaffney Exp $

*GLI-gtkfe-0.3 (27 Oct 2005)

  25 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  show mountpoint in partition summary on main screen
  allow partition size less than 1/<width of slider>*<drive size MB>
  fix unalloc->part size

  21 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  new paragraph on welcome screen
  help button launches firefox to view handbook
  
  19 Nov 2005; John N. Laliberte <allanonjl@gentoo.org>
  ExtraPackages.py: use new method get_install_package_list() from
  installprofile.
  
  6 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  Everybody loves Hypnotoad..err...Futurebar!

*GLI-gtkfe-0.2 (27 Oct 2005)

  25 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
  disable Dynamic option if systempkgs.txt not present

  24 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
  add Verbose option to ClientConfig

  22 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
  add tab for tailing the log file

  7 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
  snapshot URI entry is disabled when entering the screen if not snapshot

  5 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
  fix all calls to get_active_text() in URIBrowser.py

  22 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  move 'Recommended layout' button up to top
  add 'Clear partitions' button

  20 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  add 'network is already setup and running' checkbox on ClientConfig screen
  remove debugging print statements from PartProperties.py

  14 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  browse button is disabled along with URI entry field

  13 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  FileBrowser is now URIBrowser
  change URIBrowser to take gtk.Entry object as an argument
  add URIBrowser to PortageTree.py
