@@ -1,6 +1,6 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.187 2005/11/26 03:36:54 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.188 2005/11/26 04:21:10 agaffney Exp $
 
 *GLI-gtkfe-0.3 (27 Oct 2005)
 
@@ -8,6 +8,7 @@
   show mountpoint in partition summary on main screen
   allow partition size less than 1/<width of slider>*<drive size MB>
   fix unalloc->part size
+  don't allow MB sizes out of bounds to be entered
 
   21 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
   new paragraph on welcome screen
